 Note    : (1)rename license.txt as LICENSE; rename directory [sample] as [example]; rename directory [user] as [usr]
           (2)refactor all code
           (3)add new function GPIO_P45_cmd
           (4)add bit operation function

>Version : v0.1.0
 Alias   :
 Date    : 2019-08-03
 Note    : (1)add AUTHORS, rename log.txt as ChangeLog
           (2)fix bug of macro CONFB in bit.h
           (3)update Makefile to v0.2.4
           (4)delete abolished header file intrasm.h
           (5)move file LICENSE to root path of project

>Version : v0.2.0
 Alias   :
 Date    : 2019-09-30
 Note    : (1)rename function UART_switchTim as UART_setBaudrateGenerator and refactor it
           (2)optimize code comment style
           (3)update MCU model list and add some macro to achieve configuration parameters check function
           (4)optimize header files
             - move stc90.h to hw/stc90.h
             - add header file hml.h instead of conf.h
             - refactor conf.h and refactor all configuration macro
             - add header file version.h for HML version information
           (5)rename en enumeration type INTR_interruptPriority as UTIL_interruptPriority and move it to util.h from exit.h
           (6)rename function WDT_clear as WDT_feed
           (7)update Makefile to v0.2.5

>Version : v0.2.1
 Alias   :
 Date    : 2019-10-28
 Note    : (1)fix bugs and optimize code of TIM2 module

>Version : v0.3.0
 Alias   :
 Date    : 2019-12-26
 Note    : (1)move all header files to new path
           (2)add header files hml/types.h for type define

>Version :
 Alias   :
 Date    :
 Note    : (1)update Makefile to v0.2.6
             - support <library> target, user can get usage via <make help>
             - optimize <make version> function
              update Makefile to v0.3.0
             - optimize information print
             - support variable MCU, CODE, XRAM
           (2)refactor version.h
           (3)optimize macro for compile select