@@ -153,6 +153,21 @@ uint16_t UART_getBaudGeneratorInitValue(uint32_t baud,PERIPH_TIM tim)
 /*****************************************************************************/
 /** 
  * \author      Weilun Fong
+ * \date        2020/02/01
+ * \brief       get result of UART receiver
+ * \param[in]   
+ * \return      
+ * \ingroup     UART
+ * \remarks     
+******************************************************************************/
+byte UART_getByte(void)
+{
+    return SBUF;
+}
+
+/*****************************************************************************/
+/** 
+ * \author      Weilun Fong
  * \date        
  * \brief       check if UART module has received one byte of data or not
  * \param[in]   
@@ -195,6 +210,22 @@ void UART_sendByte(byte dat)
     SBUF = dat;
     while(!TI);
     TI = RESET;
+}
+
+/*****************************************************************************/
+/** 
+ * \author      Weilun Fong
+ * \date        2020/02/01
+ * \brief       output a hex number with character format via UART
+ * \param[in]   hex: expected hex number(range: 0x0 ~ 0xF)
+ * \return      
+ * \ingroup     UART
+ * \remarks     
+******************************************************************************/
+void UART_sendHex(uint8_t hex)
+{
+    UART_sendByte(hexTable[hex >> 0x4]);
+    UART_sendByte(hexTable[hex & 0xF]);
 }
 
 /*****************************************************************************/
