@@ -63,3 +63,4 @@
              - support variable MCU, CODE, XRAM
            (2)refactor version.h
            (3)optimize macro for compile select
+           (4)add function UART_getByte and UART_sendHex
